--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,4 @@
-PORT=
+PORT=8080
 DB_URL="host=localhost user=user password=password dbname=dbname port=5432 sslmode=disable"
+JWT_SECRET=secret
+MARKET_API=https://www.mercadobitcoin.net
